Links jump to correct time.

--- a/pinpoint.css
+++ b/pinpoint.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 100;
+  src: url('chrome-extension://negjnnajhifciokpibadgajnmkopbonp/fonts/Lato-Hairline.woff2') format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+
 .pinpoint-body {
   margin:0;
   background:rgb(37,37,37);
@@ -72,11 +80,12 @@ li:hover .pinpoint-drop-down {
 /**** Sidebar ****/
 
 .pinpoint-timelink {
-    margin-right:.5em;
+    margin-left:.39em;
     border-bottom: 3px solid transparent;
-    transition: 0.7s ease;
-    width: 0px;
-    white-space: nowrap;
+    /*transition: 0.7s ease;*/
+    /*width: 0px;*/
+    /*white-space: nowrap;*/
+    color: white;
 }
 
 .pinpoint-note {
@@ -87,7 +96,7 @@ li:hover .pinpoint-drop-down {
 }
 
 .pinpoint-note-input {
-  width: 12.45em;
+  width: 12.6em;
 }
 
 .pinpoint-content {
@@ -95,7 +104,13 @@ li:hover .pinpoint-drop-down {
   word-wrap: break-word;
   position: relative;
   display: inline-block;
-  margin-left: 50px;
+  margin-left: 5.25em;
+  margin-top: .1em;
+}
+
+.pinpoint-contentlink {
+  color: white;
+  font-family: "Lato", sans-serif;
 }
 
 .pinpoint-time-and-delete {
@@ -111,29 +126,39 @@ li:hover .pinpoint-drop-down {
 }
 
 /*Outer Div Containing The All-Notes Div*/
-.pinpoint-sidebar {
-  height: 19.5em;
+.pinpoint-sideBar {
+  height: 80%;
+  margin-top: 10%;
+  margin-bottom: 10%;
   width: 13em;
 }
 
-/*** Sidebar Delete button ***/
-.pinpoint-delete{
-  font-size: .1em;
-  text-decoration: none;
-  color: black;
-  background-color: silver;
-  padding: 2px;
-  border-radius: 20px;
-  opacity: .5;
-  left: -8.5em;
-  top: 3em;
+.pinpoint-notes-container {
+  margin-top: 1em;
 }
 
-.delete:hover {
-  background-color: red;
+.pinpoint-note:nth-child(odd) {
+  background-color: rgb(48, 48, 48);
+  display: block;
+}
+
+/*** Sidebar Delete button ***/
+
+.pinpoint-delete {
+  font-family: "Nunito", sans-serif;
+  color: white;
+  font-size: 1em;
+  margin-left: .45em;
+}
+
+.pinpoint-delete:hover {
+  color: red;
 }
 
 /*** Sidebar Save button (hidden) ***/
 .pinpoint-save {
   display:none;
 }
+
+
+
